--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 author: Robin Smith
-subtitle: Freelance web & mobile developer.
-title: Robin Smith - Freelance Developer
+title: Fundamental Origins
+subtitle: Discussions about the most important questions
 brand: Robin Smith
-email: robin@rsmith.io
+email: robin@fundamentalorigins.com
 description: > # this means to ignore newlines until "baseurl:"
   Experienced freelance software developer designing and building custom web applications and integrations using modern
   cloud technologies and frameworks.
